--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,15 +1,19 @@
+$primary: "Fredericka the Great", serif;
+$secondary: "Black Ops One", system-ui;
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: $secondary;
 }
 
 .main-page-container {
   height: 100vh;
   width: 100vw;
-  position: relative;
+  position: absolute;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   background: radial-gradient(
     circle at 50% 80%,
@@ -18,22 +22,105 @@
     rgb(4, 4, 110) 100%
   );
 
+  .main-page-title-container {
+    width: 80vw;
+    height: 200px;
+    padding: 10px;
+    margin-top: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12rem;
+
+    .title-letters {
+      font-family: $secondary;
+      background: linear-gradient(
+        55deg,
+        bisque,
+        gray 25%,
+        white 40%,
+        gray 55%,
+        white 70%,
+        gray 85%,
+        bisque 100%
+      );
+      -webkit-background-clip: text;
+      color: transparent;
+    }
+  }
+
   .main-page-image-container {
-    height: 80%;
+    height: 90%;
     width: 80%;
     position: absolute;
-    border: 1px solid yellow;
+    top: 10%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 
     .battleship-image {
-      position: absolute;
-      margin: 230px;
-      //   display: flex;
-      //   justify-content: center;
-      //   align-items: center;
-      width: 100px;
-      height: 100px;
+      position: relative;
+      width: 150px;
+      height: 150px;
+      bottom: -12px;
+      filter: blur(2px);
+    }
+    .ocean-image {
+      position: relative;
+      bottom: 0;
+      width: 100vw;
+      height: 250px;
+      background: linear-gradient(
+        to bottom,
+        black,
+        rgb(1, 61, 227) 10%,
+        rgb(4, 4, 110) 18%,
+        rgb(1, 61, 227) 23%,
+        rgb(4, 4, 110) 35%,
+        rgb(1, 61, 227) 40%,
+        rgb(4, 4, 110) 60%,
+        rgb(1, 61, 227) 67%,
+        rgb(4, 4, 110) 78%,
+        rgb(1, 61, 227) 85%,
+        black 100%
+      );
+    }
+  }
+
+  .main-page-choices-container {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 50px;
+    align-items: center;
+    font-size: 2rem;
+    color: burlywood;
+
+    .main-page-button-container {
+      width: 40%;
+      height: 40px;
+      display: flex;
+      justify-content: space-evenly;
+
+      button {
+        padding: 8px 25px;
+        border-radius: 10px;
+        border: none;
+        font-size: 1.1rem;
+        letter-spacing: 1.1px;
+        background: linear-gradient(
+          55deg,
+          bisque,
+          gray 25%,
+          white 50%,
+          gray 75%,
+          bisque 100%
+        );
+        color: darkblue;
+      }
     }
   }
 }
