--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,51 +1,278 @@
-$primary: "Fredericka the Great", serif;
-$secondary: "Black Ops One", system-ui;
+$primary-font: "Fredericka the Great", serif;
+$secondary-font: "Black Ops One", system-ui;
+$info-font: "Gothic A1", sans-serif;
+$column: 10;
+$row: 10;
+$tile-width: calc(100% / $column);
+$tile-height: calc(100% / $row);
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: $secondary;
+  font-family: $secondary-font;
 }
 
+@keyframes move-background {
+  from {
+    background-position: left;
+  }
+  to {
+    background-position: right;
+  }
+}
+
+@keyframes button-click {
+  0% {
+    opacity: 1;
+    color: rgb(246, 59, 59);
+  }
+  20% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  55% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+    color: rgb(246, 59, 59);
+  }
+  80% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  95% {
+    opacity: 0;
+  }
+  98% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    color: lime;
+  }
+}
+
+@keyframes move-ship {
+  // 50% {
+  //   width: 500px;
+  //   height: 500px;
+  //   filter: blur(0.4);
+  //   bottom: -45px;
+  // }
+  100% {
+    width: 600px;
+    height: 600px;
+    filter: blur(0);
+    bottom: -50px;
+  }
+}
+
+@keyframes fade-out {
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes move-title-container {
+  100% {
+    width: 40vw;
+    top: 0px;
+    padding: 5px;
+  }
+}
+
+@keyframes move-letters {
+  100% {
+    font-size: 3.5rem;
+  }
+}
+
+// Start of Home Page
 .main-page-container {
   height: 100vh;
   width: 100vw;
   position: absolute;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   background: radial-gradient(
     circle at 50% 80%,
-    rgb(71, 151, 249),
-    rgb(1, 61, 227) 30%,
+    rgb(117, 173, 242),
+    rgb(25, 77, 223) 45%,
     rgb(4, 4, 110) 100%
   );
 
+  .info-container {
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+
+    font-family: $info-font;
+    box-sizing: border-box;
+    position: relative;
+
+    .game-page-title-container {
+      display: flex;
+      align-items: flex-end;
+      height: 20%;
+
+      .title-battle-container,
+      .title-ship-container {
+        position: relative;
+        font-size: 4.5rem;
+        transform: scaleY(1.4) !important;
+        background: linear-gradient(
+          55deg,
+          bisque,
+          rgb(90, 90, 90) 25%,
+          white 40%,
+          rgb(90, 90, 90) 55%,
+          white 70%,
+          rgb(90, 90, 90) 85%,
+          bisque 100%
+        );
+        -webkit-background-clip: text;
+        background-clip: text;
+        background-size: 300%;
+        animation: move-background 5s linear alternate infinite;
+        color: transparent;
+      }
+    }
+
+    .fleet-info {
+      font-family: $info-font;
+      font-size: 1.1rem;
+      color: bisque;
+      font-weight: 200;
+      height: 10%;
+      color: gold;
+      font-weight: bold;
+      display: flex;
+      align-items: flex-end;
+    }
+
+    .fleet-container {
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      color: bisque;
+      height: 70%;
+      gap: 0;
+      bottom: 0;
+
+      .fleet-name-container {
+        width: 100%;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+        .ship-name-container {
+          font-family: $secondary-font;
+          font-weight: 400;
+          font-style: normal;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 10px;
+
+          .ship-name {
+            font-family: $secondary-font;
+            font-size: 1.1rem;
+            letter-spacing: 2px;
+            transform: scaleY(1.3);
+            color: lime;
+
+            &:hover {
+              transform: scaleX(1.3) scaleY(1.5);
+              color: red;
+            }
+          }
+        }
+
+        .destroyer-img {
+          width: $tile-width * 2;
+        }
+      }
+      .image-btn-container {
+        width: 100%;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .ship-image-container {
+          height: 80%;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+
+        button {
+          height: 10%;
+          width: 80%;
+          align-items: center;
+          justify-content: center;
+          border-radius: 10px;
+          border: none;
+          font-size: 1.2rem;
+          background-color: gold;
+        }
+      }
+    }
+  }
   .main-page-title-container {
+    position: relative;
     width: 80vw;
     height: 200px;
     padding: 10px;
-    margin-top: 7%;
+    margin-top: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 12rem;
+    z-index: 10;
 
-    .title-letters {
-      font-family: $secondary;
+    .letters {
+      position: relative;
+      font-family: $secondary-font;
+      font-size: 9rem;
       background: linear-gradient(
         55deg,
         bisque,
-        gray 25%,
+        rgb(100, 100, 100) 25%,
         white 40%,
-        gray 55%,
+        rgb(100, 100, 100) 55%,
         white 70%,
-        gray 85%,
+        rgb(100, 100, 100) 85%,
         bisque 100%
       );
       -webkit-background-clip: text;
+      background-clip: text;
+      background-size: 200%;
+      animation: move-background 5s linear alternate infinite;
       color: transparent;
+    }
+
+    .title-battle-container .letters:nth-of-type(2) {
+      color: rgb(242, 80, 80);
     }
   }
 
@@ -61,11 +288,13 @@ $secondary: "Black Ops One", system-ui;
 
     .battleship-image {
       position: relative;
-      width: 150px;
-      height: 150px;
-      bottom: -12px;
-      filter: blur(2px);
+      width: 200px;
+      height: 200px;
+      bottom: -17px;
+      filter: blur(1.5px);
+      z-index: 10;
     }
+
     .ocean-image {
       position: relative;
       bottom: 0;
@@ -94,16 +323,23 @@ $secondary: "Black Ops One", system-ui;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 50px;
     align-items: center;
     font-size: 2rem;
     color: burlywood;
 
+    h3 {
+      letter-spacing: 10px;
+
+      span {
+        margin-left: 30px;
+      }
+    }
     .main-page-button-container {
-      width: 40%;
+      width: 70%;
       height: 40px;
       display: flex;
       justify-content: space-evenly;
+      z-index: 1;
 
       button {
         padding: 8px 25px;
@@ -114,13 +350,99 @@ $secondary: "Black Ops One", system-ui;
         background: linear-gradient(
           55deg,
           bisque,
-          gray 25%,
-          white 50%,
-          gray 75%,
+          black 25%,
+          black 75%,
           bisque 100%
         );
-        color: darkblue;
+        color: bisque;
+        transition: color 0.5s ease-in-out;
+
+        &:hover {
+          cursor: pointer;
+          background-color: darkblue;
+          color: rgb(69, 191, 232);
+        }
       }
+    }
+  }
+
+  // Loading Game
+  .boardgame-container {
+    padding: 80px 60px;
+    width: 700px;
+    height: auto;
+
+    .top-container,
+    .bottom-container {
+      width: 100%;
+      height: 50%;
+      display: flex;
+      flex-wrap: wrap;
+      border: 5px solid bisque;
+      background: rgb(12, 158, 232);
+    }
+
+    .top-container {
+      border-bottom: 6px solid bisque;
+    }
+
+    .bottom-container {
+      border-top: 6px solid bisque;
+    }
+    .block {
+      width: $tile-width;
+      height: $tile-height;
+      border: 1px dotted lightgray;
+    }
+  }
+
+  // Fleet container
+  .fleet-container {
+    position: relative;
+    height: auto;
+    bottom: 50px;
+    display: flex;
+    align-items: center;
+    gap: 60px;
+
+    div {
+      font-family: $info-font;
+    }
+
+    .ship-container {
+      width: 50%;
+      display: flex;
+      gap: 5px;
+
+      .ship-images {
+        opacity: 1;
+        // height: 70%;
+
+        &:hover {
+          opacity: 0.6;
+          scale: 1.25;
+        }
+      }
+
+      .destroyer-img {
+        width: calc($tile-width * 5);
+      }
+
+      .submarine-img,
+      .cruiser-img {
+        width: 60%;
+      }
+
+      .battleship-img {
+        width: 80%;
+      }
+
+      .carrier-img {
+        width: 100%;
+      }
+      // .ship-images {
+      //   width: 100%;
+      // }
     }
   }
 }
